fixed overflowing movie title UI bug

--- a/ClientApp/src/styles.css
+++ b/ClientApp/src/styles.css
@@ -60,3 +60,7 @@ body {
   background-color: #343a40;
 }
 
+div.card-footer > h6 {
+  width: 300px;
+}
+
